--- a/thesillyhome_src/thesillyhome/pyproject.toml
+++ b/thesillyhome_src/thesillyhome/pyproject.toml
@@ -9,7 +9,7 @@ license = "Apache"
 python = "3.9"
 mysql-connector = "2.2.9"
 numpy = "1.22.4"
-pandas = "1.4.2"
+pandas = "1.5.0"
 scikit-learn = "1.1.1"
 psycopg2 = "2.9.3"
 matplotlib = "3.5.2"
@@ -17,8 +17,8 @@ SQLAlchemy = "1.4.40"
 PyMySQL = "1.0.2"
 cryptography = "37.0.4"
 scipy = "1.8.1"
-pyarrow = "9.0.0"
 websockets = "10.4"
+fastparquet = "2022.12.0"
 
 [tool.poetry.dev-dependencies]
 
