--- a/thesillyhome_src/thesillyhome/requirements.txt
+++ b/thesillyhome_src/thesillyhome/requirements.txt
@@ -1,10 +1,9 @@
 mysql-connector==2.2.9
 numpy==1.22.4
-pandas==1.4.2
+pandas==1.5.0
 psycopg2==2.9.3
 matplotlib==3.5.2
 sqlalchemy==1.4.40
 pymysql==1.0.2
-pyarrow==9.0.0
 websockets==10.4
-tflite-runtime==2.11.0
+fastparquet==2022.12.0
