Fixing Appdaemon prediction flow

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,8 +1,7 @@
 volumes:
   thesillyhome_cloud_config:
     name: thesillyhome_cloud_config
-  ignore:
-    name: ignore
+    external: true
 
 services:
   thesillyhome_cloud:
